# typewirepy

./: .envrc  .gitignore  CONTRIBUTING.md  LICENSE  README.md  flake.nix  justfile  pyproject.toml
.claude/skills/release/: SKILL.md
.github/workflows/: ci.yml  publish.yml
docs/: SPEC.md  best-practices.md
src/typewirepy/: __init__.py  _introspect.py  _token.py  container.py  core.py  errors.py  group.py  monitor.py  protocols.py  scope.py  token.py  wire.py
src/typewirepy/integrations/: fastapi.py
tests/: conftest.py  test_circular.py  test_container.py  test_distributed.py  test_edge_cases.py  test_fastapi.py  test_generators.py  test_group.py  test_import.py  test_overrides.py  test_sync.py  test_use_cases.py  test_validation.py  test_wire.py
