[project]
name = "typewirepy"
version = "0.1.0"
description = "Lightweight, container-agnostic dependency injection for Python — typed, explicit, composable."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "TypeWireTS Contributors" },
]
keywords = [
    "dependency-injection",
    "di",
    "ioc",
    "container",
    "typed",
    "typesafe",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

# Zero runtime dependencies
dependencies = []

[project.optional-dependencies]
fastapi = ["fastapi>=0.100.0"]

[project.urls]
Homepage = "https://github.com/typewirepy/typewirepy"
Repository = "https://github.com/typewirepy/typewirepy"
Issues = "https://github.com/typewirepy/typewirepy/issues"

# ── Build system ──

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/typewirepy"]

# ── Dev dependencies ──

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
    "pyright>=1.1",
    "ty>=0.0.1a7",
    "pyrefly>=0.10",
    "fastapi>=0.100.0",
    "httpx>=0.27",
]

# ── Tool configuration ──

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "strict"
reportMissingTypeStubs = false

[tool.ty.rules]
# ty configuration (Astral's type checker, in beta)
# Adjust as ty matures
# unused-ignore-comment = "warn"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # bugbear
    "SIM",  # simplify
    "TC",   # type-checking imports
    "RUF",  # ruff-specific
]
